Updated OpenAPI + Normalized errors + updated CI
